Чтение и создание ФИКСов (без прогресса и чата)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.datasource.url=${POSTGRES_URL}
 spring.datasource.username=${POSTGRES_LOGIN}
 spring.datasource.password=${POSTGRES_PASS}
 
+server.error.include-message=always
+
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database=postgresql
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
